# drplanner

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Graph_Classification.ipynb  LICENSE  LICENSE.txt  README.md  analyze_drplanner.py  evaluate_drplanner.py  pyproject.toml  requirements.txt  run_drplanner.py  run_drplanner_copy.py  test.py  test_drplanner.py
dataset/: README.md  comparing_new_old.py  structure_file.txt  yaml2json.py  yaml2json_all.py
dataset/jsons/: 10041932.json  10041939.json  10041940.json  10041943.json  10041944.json  (+140 more)
docs/: Makefile  index.html
drplanner/: main.py  open_issues.txt
img/: DEU_AachenAseag-1_1000_T-1019  DEU_AachenAseag-1_100_T-119  DEU_AachenAseag-1_1020_T-1039  DEU_AachenAseag-1_1040_T-1059  DEU_AachenAseag-1_1060_T-1079  DEU_AachenAseag-1_1080_T-1099  DEU_AachenAseag-1_10_T-19  DEU_AachenAseag-1_11000_T-1019  DEU_AachenAseag-1_1100_T-1119  DEU_AachenAseag-1_1100_T-119  DEU_AachenAseag-1_11020_T-1039  DEU_AachenAseag-1_11040_T-1059  DEU_AachenAseag-1_11060_T-1079  DEU_AachenAseag-1_11080_T-1099  DEU_AachenAseag-1_11100_T-1119  DEU_AachenAseag-1_11120_T-1139  DEU_AachenAseag-1_11140_T-1159  DEU_AachenAseag-1_11160_T-1179  DEU_AachenAseag-1_11180_T-1199  DEU_AachenAseag-1_11200_T-1219  DEU_AachenAseag-1_1120_T-1139  DEU_AachenAseag-1_1120_T-139  DEU_AachenAseag-1_11220_T-1239  DEU_AachenAseag-1_11240_T-1259  DEU_AachenAseag-1_11260_T-1279  DEU_AachenAseag-1_11280_T-1299  DEU_AachenAseag-1_11300_T-1319  DEU_AachenAseag-1_11320_T-1339  DEU_AachenAseag-1_11340_T-1359  DEU_AachenAseag-1_11380_T-1399  DEU_AachenAseag-1_11400_T-1419  DEU_AachenAseag-1_1140_T-1159  DEU_AachenAseag-1_1140_T-159  DEU_AachenAseag-1_11420_T-1439  DEU_AachenAseag-1_11440_T-1459  DEU_AachenAseag-1_11460_T-1479  DEU_AachenAseag-1_11480_T-1499  DEU_AachenAseag-1_11500_T-1519  DEU_AachenAseag-1_11520_T-1539  DEU_AachenAseag-1_11540_T-1559  (+4926 more)
scenarios/: DEU_Flensburg-3_1_I-1-1.cr.xml  DEU_Frankfurt-11_8_I-1.cr.xml  DEU_Guetersloh-10_4_T-1.xml  DEU_Guetersloh-10_5_T-1.xml  DEU_Guetersloh-11_3_T-1.xml  DEU_Guetersloh-15_2_T-1 copy.xml  DEU_Guetersloh-4_5_T-1.xml  DEU_Guetersloh-6_3_T-1.xml  DEU_Guetersloh-7_2_T-1.xml  DEU_Guetersloh-8_1_T-1.xml  DEU_Muc-11_1_I-1-1.cr.xml  USA_Lanker-2_19_T-1.xml
tests/: test_basic.py  test_describer.py  test_sampling.py
tool/: check_intersections.py  data_statistics.py  output_to_excel.py
tutorials/: usage.py
(+5351 files in other folders)
