[tool.poetry]
name = "drplanner"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD"
authors = ["Yuanfei Lin, Cyber-Physical Systems Group, Technical University of Munich <yuanfei.lin@tum.de>"]
description = "Diagnosis and Repair of Search-Based Motion Planners Using Large Language Models"
keywords = [
    "automated driving",
    "motion planning",
    "large language models",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
openai = ">=1.13.3"
tiktoken = ">=0.5.2"
commonroad-io = ">=2023.1"
commonroad-drivability-checker = ">=2023.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


