[tool.poetry]
name = "drplanner"
version = "0.1.0"
readme = "README.md"
license = "BSD"
authors = ["Yuanfei Lin, Cyber-Physical Systems Group, Technical University of Munich <yuanfei.lin@tum.de>"]
description = "Diagnosis and Repair of Search-Based Motion Planners Using Large Language Models"
keywords = [
    "automated driving",
    "motion planning",
    "large language models",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.10"  # Adjust according to your project's needs
openai = ">=1.13.3"
tiktoken = ">=0.5.2"
commonroad-io = ">=2024.1"
commonroad-drivability-checker = ">=2023.1"
python-dotenv = ">=1.0.1"
# commonroad-search = { git = "https://gitlab.lrz.de/tum-cps/commonroad-search.git", rev = "be2df4a5b2a0077c85178520dae6aab60030c209" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"

[tool.poetry.group.test]
optional = true

